--- a/index.html
+++ b/index.html
@@ -244,6 +244,12 @@
               </a>
             </div>
             <!-- end box -->
+            <div class="box-portfolio">
+              <a href="https://kimduyen0205.github.io/shopping-cart/">
+                <img src="./images/shopping.png" alt="layout shopping cart" />
+              </a>
+            </div>
+            <!-- end box -->
           </div>
         </div>
       </div>
