update file index

--- a/index.html
+++ b/index.html
@@ -251,6 +251,17 @@
             </div>
             <!-- end box -->
           </div>
+          <div class="row-portfolio">
+            <div class="box-portfolio">
+              <a href="https://kimduyen0205.github.io/shopping-cart-redux/">
+                <img
+                  src="./images/shopping-redux.png"
+                  alt="layout shopping cart redux"
+                />
+              </a>
+            </div>
+            <!-- end box -->
+          </div>
         </div>
       </div>
     </div>
