update index and style

--- a/index.html
+++ b/index.html
@@ -176,18 +176,30 @@
               <a href="https://kimduyen0205.github.io/layout_03/">
                 <img src="./images/layout_03.png" alt="layout03" />
               </a>
+              <div class="language-proramming">
+                <span>HTML5</span>
+                <span>CSS3</span>
+              </div>
             </div>
             <!-- end box -->
             <div class="box-portfolio">
               <a href="https://kimduyen0205.github.io/layout_06/index.html">
                 <img src="./images/layout_06.png" alt="layout06" />
               </a>
+              <div class="language-proramming">
+                <span>HTML5</span>
+                <span>CSS3</span>
+              </div>
             </div>
             <!-- end box -->
             <div class="box-portfolio">
               <a href="https://kimduyen0205.github.io/layout_07/index.html">
                 <img src="./images/layout_07.png" alt="layout07" />
               </a>
+              <div class="language-proramming">
+                <span>HTML5</span>
+                <span>CSS3</span>
+              </div>
             </div>
             <!-- end box -->
           </div>
@@ -196,18 +208,31 @@
               <a href="https://kimduyen0205.github.io/layout_09/index.html">
                 <img src="./images/layout_09.png" alt="layout09" />
               </a>
+              <div class="language-proramming">
+                <span>HTML5</span>
+                <span>CSS3</span>
+              </div>
             </div>
             <!-- end box -->
             <div class="box-portfolio">
               <a href="https://kimduyen0205.github.io/layout_11/index.html">
                 <img src="./images/layout_11.png" alt="layout11" />
               </a>
+              <div class="language-proramming">
+                <span>HTML5</span>
+                <span>CSS3</span>
+              </div>
             </div>
             <!-- end box -->
             <div class="box-portfolio">
               <a href="https://kimduyen0205.github.io/CalculatorJs/index.htm">
                 <img src="./images/calculator.png" alt="layout calculator" />
               </a>
+              <div class="language-proramming">
+                <span>HTML5</span>
+                <span>CSS3</span>
+                <span>JavaScript</span>
+              </div>
             </div>
             <!-- end box -->
           </div>
@@ -216,18 +241,33 @@
               <a href="https://kimduyen0205.github.io/ShowHideJS/index.html">
                 <img src="./images/showandhide.png" alt="layout show hide" />
               </a>
+              <div class="language-proramming">
+                <span>HTML5</span>
+                <span>CSS3</span>
+                <span>JavaScript</span>
+              </div>
             </div>
             <!-- end box -->
             <div class="box-portfolio">
               <a href="https://kimduyen0205.github.io/AddItemJS/index.html">
                 <img src="./images/additems.png" alt="layout add items" />
               </a>
+              <div class="language-proramming">
+                <span>HTML5</span>
+                <span>CSS3</span>
+                <span>JavaScript</span>
+              </div>
             </div>
             <!-- end box -->
             <div class="box-portfolio">
               <a href="https://kimduyen0205.github.io/CartJS/index.html">
                 <img src="./images/cart.png" alt="layout cart" />
               </a>
+              <div class="language-proramming">
+                <span>HTML5</span>
+                <span>CSS3</span>
+                <span>JavaScript</span>
+              </div>
             </div>
             <!-- end box -->
           </div>
@@ -236,18 +276,31 @@
               <a href="https://kimduyen0205.github.io/layout_12/index.html">
                 <img src="./images/layout_12.png" alt="layout_12" />
               </a>
+              <div class="language-proramming">
+                <span>HTML5</span>
+                <span>CSS3</span>
+              </div>
             </div>
             <!-- end box -->
             <div class="box-portfolio">
               <a href="https://kimduyen0205.github.io/layout_13/">
                 <img src="./images/login.png" alt="layout login" />
               </a>
+              <div class="language-proramming">
+                <span>HTML5</span>
+                <span>CSS3</span>
+              </div>
             </div>
             <!-- end box -->
             <div class="box-portfolio">
               <a href="https://kimduyen0205.github.io/shopping-cart/">
                 <img src="./images/shopping.png" alt="layout shopping cart" />
               </a>
+              <div class="language-proramming">
+                <span>HTML5</span>
+                <span>CSS3</span>
+                <span>ReactJS</span>
+              </div>
             </div>
             <!-- end box -->
           </div>
@@ -259,6 +312,12 @@
                   alt="layout shopping cart redux"
                 />
               </a>
+              <div class="language-proramming">
+                <span>HTML5</span>
+                <span>CSS3</span>
+                <span>ReactJS</span>
+                <span>Redux</span>
+              </div>
             </div>
             <!-- end box -->
           </div>
