--- a/index.html
+++ b/index.html
@@ -320,6 +320,17 @@
               </div>
             </div>
             <!-- end box -->
+            <div class="box-portfolio">
+              <a href="https://kimduyen0205.github.io/stop-watch/">
+                <img src="./images/stopwatch.png" alt="stop watch" />
+              </a>
+              <div class="language-proramming">
+                <span>HTML5</span>
+                <span>CSS3</span>
+                <span>ReactJS</span>
+              </div>
+            </div>
+            <!-- end box -->
           </div>
         </div>
       </div>
