update index continue

--- a/index.html
+++ b/index.html
@@ -317,6 +317,7 @@
                 <span>CSS3</span>
                 <span>ReactJS</span>
                 <span>Redux</span>
+                <span>Hooks</span>
               </div>
             </div>
             <!-- end box -->
@@ -328,6 +329,18 @@
                 <span>HTML5</span>
                 <span>CSS3</span>
                 <span>ReactJS</span>
+              </div>
+            </div>
+            <!-- end box -->
+            <div class="box-portfolio">
+              <a href="https://kimduyen0205.github.io/count-hooks/">
+                <img src="./images/counter.png" alt="counter" />
+              </a>
+              <div class="language-proramming">
+                <span>HTML5</span>
+                <span>CSS3</span>
+                <span>ReactJS</span>
+                <span>Hooks</span>
               </div>
             </div>
             <!-- end box -->
