--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
               <div class="language-proramming">
                 <span>HTML5</span>
                 <span>CSS3</span>
-                <span>ReactJS</span>
+                <span>React.JS</span>
               </div>
             </div>
             <!-- end box -->
@@ -315,7 +315,7 @@
               <div class="language-proramming">
                 <span>HTML5</span>
                 <span>CSS3</span>
-                <span>ReactJS</span>
+                <span>React.JS</span>
                 <span>Redux</span>
                 <span>Hooks</span>
               </div>
@@ -328,7 +328,7 @@
               <div class="language-proramming">
                 <span>HTML5</span>
                 <span>CSS3</span>
-                <span>ReactJS</span>
+                <span>React.JS</span>
               </div>
             </div>
             <!-- end box -->
@@ -339,8 +339,21 @@
               <div class="language-proramming">
                 <span>HTML5</span>
                 <span>CSS3</span>
-                <span>ReactJS</span>
+                <span>React.JS</span>
                 <span>Hooks</span>
+              </div>
+            </div>
+            <!-- end box -->
+          </div>
+          <div class="row-portfolio">
+            <div class="box-portfolio">
+              <a href="https://kimduyen0205.github.io/form-user/">
+                <img src="./images/form.png" alt="form user" />
+              </a>
+              <div class="language-proramming">
+                <span>HTML5</span>
+                <span>CSS3</span>
+                <span>React.JS</span>
               </div>
             </div>
             <!-- end box -->
