update product continue

--- a/index.html
+++ b/index.html
@@ -357,6 +357,17 @@
               </div>
             </div>
             <!-- end box -->
+            <div class="box-portfolio">
+              <a href="https://kimduyen0205.github.io/todo-app/">
+                <img src="./images/todo.png" alt="todo list" />
+              </a>
+              <div class="language-proramming">
+                <span>HTML5</span>
+                <span>CSS3</span>
+                <span>React.JS</span>
+              </div>
+            </div>
+            <!-- end box -->
           </div>
         </div>
       </div>
