update demo calculator

--- a/index.html
+++ b/index.html
@@ -368,6 +368,18 @@
               </div>
             </div>
             <!-- end box -->
+            <div class="box-portfolio">
+              <a href="https://kimduyen0205.github.io/calculator/">
+                <img src="./images/maytinh.png" alt="may tinh don gian" />
+              </a>
+              <div class="language-proramming">
+                <span>HTML5</span>
+                <span>CSS3</span>
+                <span>React.JS</span>
+                <span>Hooks</span>
+              </div>
+            </div>
+            <!-- end box -->
           </div>
         </div>
       </div>
