--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </li>
           </ul>
           <div class="center-download-cv">
-            <a href="./cv/Ngo-Thi-Kim-Duyen-tiengviet.pdf">
+            <a href="./cv/Ngo-Thi-Kim-Duyen-english.pdf">
               <button><i class="fas fa-download"></i> My cv</button>
             </a>
           </div>
@@ -149,7 +149,7 @@
               </tr>
               <tr>
                 <td><h4>Tools:</h4></td>
-                <td>Visual Studio Code, Git</td>
+                <td>Visual Studio Code, Git, Postman</td>
               </tr>
               <tr>
                 <td><h4>Code Quality Analysis:</h4></td>
@@ -176,6 +176,11 @@
               <a href="https://kimduyen0205.github.io/layout_03/">
                 <img src="./images/layout_03.png" alt="layout03" />
               </a>
+              <div class="detail-portfolio">
+                <a href="https://kimduyen0205.github.io/layout_03/">
+                  <button>See Demo</button>
+                </a>
+              </div>
               <div class="language-proramming">
                 <span>HTML5</span>
                 <span>CSS3</span>
@@ -186,6 +191,11 @@
               <a href="https://kimduyen0205.github.io/layout_06/index.html">
                 <img src="./images/layout_06.png" alt="layout06" />
               </a>
+              <div class="detail-portfolio">
+                <a href="https://kimduyen0205.github.io/layout_06/index.html">
+                  <button>See Demo</button>
+                </a>
+              </div>
               <div class="language-proramming">
                 <span>HTML5</span>
                 <span>CSS3</span>
@@ -196,6 +206,11 @@
               <a href="https://kimduyen0205.github.io/layout_07/index.html">
                 <img src="./images/layout_07.png" alt="layout07" />
               </a>
+              <div class="detail-portfolio">
+                <a href="https://kimduyen0205.github.io/layout_07/index.html">
+                  <button>See Demo</button>
+                </a>
+              </div>
               <div class="language-proramming">
                 <span>HTML5</span>
                 <span>CSS3</span>
@@ -208,6 +223,11 @@
               <a href="https://kimduyen0205.github.io/layout_09/index.html">
                 <img src="./images/layout_09.png" alt="layout09" />
               </a>
+              <div class="detail-portfolio">
+                <a href="https://kimduyen0205.github.io/layout_09/index.html">
+                  <button>See Demo</button>
+                </a>
+              </div>
               <div class="language-proramming">
                 <span>HTML5</span>
                 <span>CSS3</span>
@@ -218,6 +238,11 @@
               <a href="https://kimduyen0205.github.io/layout_11/index.html">
                 <img src="./images/layout_11.png" alt="layout11" />
               </a>
+              <div class="detail-portfolio">
+                <a href="https://kimduyen0205.github.io/layout_11/index.html">
+                  <button>See Demo</button>
+                </a>
+              </div>
               <div class="language-proramming">
                 <span>HTML5</span>
                 <span>CSS3</span>
@@ -228,6 +253,11 @@
               <a href="https://kimduyen0205.github.io/CalculatorJs/index.htm">
                 <img src="./images/calculator.png" alt="layout calculator" />
               </a>
+              <div class="detail-portfolio">
+                <a href="https://kimduyen0205.github.io/CalculatorJs/index.htm">
+                  <button>See Demo</button>
+                </a>
+              </div>
               <div class="language-proramming">
                 <span>HTML5</span>
                 <span>CSS3</span>
@@ -241,6 +271,11 @@
               <a href="https://kimduyen0205.github.io/ShowHideJS/index.html">
                 <img src="./images/showandhide.png" alt="layout show hide" />
               </a>
+              <div class="detail-portfolio">
+                <a href="https://kimduyen0205.github.io/ShowHideJS/index.html">
+                  <button>See Demo</button>
+                </a>
+              </div>
               <div class="language-proramming">
                 <span>HTML5</span>
                 <span>CSS3</span>
@@ -252,6 +287,11 @@
               <a href="https://kimduyen0205.github.io/AddItemJS/index.html">
                 <img src="./images/additems.png" alt="layout add items" />
               </a>
+              <div class="detail-portfolio">
+                <a href="https://kimduyen0205.github.io/AddItemJS/index.html">
+                  <button>See Demo</button>
+                </a>
+              </div>
               <div class="language-proramming">
                 <span>HTML5</span>
                 <span>CSS3</span>
@@ -263,6 +303,11 @@
               <a href="https://kimduyen0205.github.io/CartJS/index.html">
                 <img src="./images/cart.png" alt="layout cart" />
               </a>
+              <div class="detail-portfolio">
+                <a href="https://kimduyen0205.github.io/CartJS/index.html">
+                  <button>See Demo</button>
+                </a>
+              </div>
               <div class="language-proramming">
                 <span>HTML5</span>
                 <span>CSS3</span>
@@ -276,6 +321,11 @@
               <a href="https://kimduyen0205.github.io/layout_12/index.html">
                 <img src="./images/layout_12.png" alt="layout_12" />
               </a>
+              <div class="detail-portfolio">
+                <a href="https://kimduyen0205.github.io/layout_12/index.html">
+                  <button>See Demo</button>
+                </a>
+              </div>
               <div class="language-proramming">
                 <span>HTML5</span>
                 <span>CSS3</span>
@@ -286,6 +336,11 @@
               <a href="https://kimduyen0205.github.io/layout_13/">
                 <img src="./images/login.png" alt="layout login" />
               </a>
+              <div class="detail-portfolio">
+                <a href="https://kimduyen0205.github.io/layout_13/">
+                  <button>See Demo</button>
+                </a>
+              </div>
               <div class="language-proramming">
                 <span>HTML5</span>
                 <span>CSS3</span>
@@ -296,6 +351,11 @@
               <a href="https://kimduyen0205.github.io/shopping-cart/">
                 <img src="./images/shopping.png" alt="layout shopping cart" />
               </a>
+              <div class="detail-portfolio">
+                <a href="https://kimduyen0205.github.io/shopping-cart/">
+                  <button>See Demo</button>
+                </a>
+              </div>
               <div class="language-proramming">
                 <span>HTML5</span>
                 <span>CSS3</span>
@@ -312,6 +372,11 @@
                   alt="layout shopping cart redux"
                 />
               </a>
+              <div class="detail-portfolio">
+                <a href="https://kimduyen0205.github.io/shopping-cart-redux/">
+                  <button>See Demo</button>
+                </a>
+              </div>
               <div class="language-proramming">
                 <span>HTML5</span>
                 <span>CSS3</span>
@@ -325,6 +390,11 @@
               <a href="https://kimduyen0205.github.io/stop-watch/">
                 <img src="./images/stopwatch.png" alt="stop watch" />
               </a>
+              <div class="detail-portfolio">
+                <a href="https://kimduyen0205.github.io/stop-watch/">
+                  <button>See Demo</button>
+                </a>
+              </div>
               <div class="language-proramming">
                 <span>HTML5</span>
                 <span>CSS3</span>
@@ -336,6 +406,11 @@
               <a href="https://kimduyen0205.github.io/count-hooks/">
                 <img src="./images/counter.png" alt="counter" />
               </a>
+              <div class="detail-portfolio">
+                <a href="https://kimduyen0205.github.io/count-hooks/">
+                  <button>See Demo</button>
+                </a>
+              </div>
               <div class="language-proramming">
                 <span>HTML5</span>
                 <span>CSS3</span>
@@ -350,6 +425,11 @@
               <a href="https://kimduyen0205.github.io/form-user/">
                 <img src="./images/form.png" alt="form user" />
               </a>
+              <div class="detail-portfolio">
+                <a href="https://kimduyen0205.github.io/form-user/">
+                  <button>See Demo</button>
+                </a>
+              </div>
               <div class="language-proramming">
                 <span>HTML5</span>
                 <span>CSS3</span>
@@ -361,6 +441,11 @@
               <a href="https://kimduyen0205.github.io/todo-app/">
                 <img src="./images/todo.png" alt="todo list" />
               </a>
+              <div class="detail-portfolio">
+                <a href="https://kimduyen0205.github.io/todo-app/">
+                  <button>See Demo</button>
+                </a>
+              </div>
               <div class="language-proramming">
                 <span>HTML5</span>
                 <span>CSS3</span>
@@ -372,6 +457,11 @@
               <a href="https://kimduyen0205.github.io/calculator/">
                 <img src="./images/maytinh.png" alt="may tinh don gian" />
               </a>
+              <div class="detail-portfolio">
+                <a href="https://kimduyen0205.github.io/calculator/">
+                  <button>See Demo</button>
+                </a>
+              </div>
               <div class="language-proramming">
                 <span>HTML5</span>
                 <span>CSS3</span>
