update interface cv

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
       crossorigin="anonymous"
     />
-    <title>Portfolio Webpage</title>
+    <title>My Portfolio</title>
   </head>
   <body>
     <!-- Menu -->
@@ -483,7 +483,6 @@
             If you'd like to get in touch with me, please send me a message.
             Thanks a lot!
           </p>
-          <p>Email: kimduyennt20@gmail.com</p>
         </div>
         <div class="form-contact">
           <form
@@ -541,6 +540,7 @@
     </div>
     <div class="footer">
       <p>Copyright © 2020 by Kim Duyên. All Rights Reserved.</p>
+      <p>Contact email: kimduyennt20@gmail.com</p>
     </div>
   </body>
 </html>
