--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
               <tr>
                 <td><h4>Language programming:</h4></td>
                 <td>
-                  HTML5, CSS3, JavaScript ES6, Front-end Web React.js, Photoshop
-                  basics
+                  HTML5, CSS3, JavaScript Core ES6, Front-end Web ReactJS,
+                  Photoshop basics
                 </td>
               </tr>
               <tr>
@@ -359,7 +359,7 @@
               <div class="language-proramming">
                 <span>HTML5</span>
                 <span>CSS3</span>
-                <span>React.JS</span>
+                <span>ReactJS</span>
               </div>
             </div>
             <!-- end box -->
@@ -380,7 +380,7 @@
               <div class="language-proramming">
                 <span>HTML5</span>
                 <span>CSS3</span>
-                <span>React.JS</span>
+                <span>ReactJS</span>
                 <span>Redux</span>
                 <span>Hooks</span>
               </div>
@@ -398,7 +398,7 @@
               <div class="language-proramming">
                 <span>HTML5</span>
                 <span>CSS3</span>
-                <span>React.JS</span>
+                <span>ReactJS</span>
               </div>
             </div>
             <!-- end box -->
@@ -414,7 +414,7 @@
               <div class="language-proramming">
                 <span>HTML5</span>
                 <span>CSS3</span>
-                <span>React.JS</span>
+                <span>ReactJS</span>
                 <span>Hooks</span>
               </div>
             </div>
@@ -433,7 +433,7 @@
               <div class="language-proramming">
                 <span>HTML5</span>
                 <span>CSS3</span>
-                <span>React.JS</span>
+                <span>ReactJS</span>
               </div>
             </div>
             <!-- end box -->
@@ -449,7 +449,7 @@
               <div class="language-proramming">
                 <span>HTML5</span>
                 <span>CSS3</span>
-                <span>React.JS</span>
+                <span>ReactJS</span>
               </div>
             </div>
             <!-- end box -->
@@ -465,7 +465,7 @@
               <div class="language-proramming">
                 <span>HTML5</span>
                 <span>CSS3</span>
-                <span>React.JS</span>
+                <span>ReactJS</span>
                 <span>Hooks</span>
               </div>
             </div>
