--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
           >
             <i class="youtube-icon fab fa-youtube fa-lg"></i>
           </a>
+          <a href="https://www.linkedin.com/in/ngô-thị-kim-duyên-38a305202">
+            <i class="linked-icon fab fa-linkedin fa-lg"></i>
+          </a>
         </p>
       </div>
     </div>
