update icon continue

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <i class="youtube-icon fab fa-youtube fa-lg"></i>
           </a>
           <a href="https://www.linkedin.com/in/ngô-thị-kim-duyên-38a305202">
-            <i class="linked-icon fab fa-linkedin fa-lg"></i>
+            <i class="linked-icon fab fa-linkedin-in fa-lg"></i>
           </a>
         </p>
       </div>
