--- a/index.html
+++ b/index.html
@@ -474,6 +474,28 @@
             </div>
             <!-- end box -->
           </div>
+          <div class="row-portfolio">
+            <div class="box-portfolio">
+              <a href="https://kimduyen0205.github.io/layout-boostrap/">
+                <img
+                  src="./images/layoutbootstrap3.png"
+                  alt="giao dien bootstrap 3"
+                />
+              </a>
+              <div class="detail-portfolio">
+                <a href="https://kimduyen0205.github.io/layout-boostrap/">
+                  <button>See Demo</button>
+                </a>
+              </div>
+              <div class="language-proramming">
+                <span>HTML5</span>
+                <span>CSS3</span>
+                <span>ReactJS</span>
+                <span>Bootstrap 3</span>
+              </div>
+            </div>
+            <!-- end box -->
+          </div>
         </div>
       </div>
     </div>
