update language framework

--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
               <tr>
                 <td><h4>Language programming:</h4></td>
                 <td>
-                  HTML5, CSS3, JavaScript Core ES6, Front-end Web ReactJS,
-                  Photoshop basics
+                  HTML5, CSS3, JavaScript Core ES6, Front-end Web
+                  ReactJS,Bootstrap,Photoshop basics
                 </td>
               </tr>
               <tr>
