update new product

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
               </tr>
               <tr>
                 <td><h4>Tools:</h4></td>
-                <td>Visual Studio Code, Git, Postman</td>
+                <td>Visual Studio Code, Git, Postman, Json Server</td>
               </tr>
               <tr>
                 <td><h4>Code Quality Analysis:</h4></td>
@@ -492,6 +492,21 @@
                 <span>CSS3</span>
                 <span>ReactJS</span>
                 <span>Bootstrap 3</span>
+              </div>
+            </div>
+            <!-- end box -->
+            <div class="box-portfolio">
+              <a href="https://kimduyen0205.github.io/Layout_14/index.html">
+                <img src="./images/layout_14.png" alt="giao dien layout 14" />
+              </a>
+              <div class="detail-portfolio">
+                <a href="https://kimduyen0205.github.io/Layout_14/index.html">
+                  <button>See Demo</button>
+                </a>
+              </div>
+              <div class="language-proramming">
+                <span>HTML5</span>
+                <span>CSS3</span>
               </div>
             </div>
             <!-- end box -->
