--- a/index.html
+++ b/index.html
@@ -510,6 +510,21 @@
               </div>
             </div>
             <!-- end box -->
+            <div class="box-portfolio">
+              <a href="https://kimduyen0205.github.io/FilterList/">
+                <img src="./images/Filter_list.png" alt="Chức năng lọc danh sách" />
+              </a>
+              <div class="detail-portfolio">
+                <a href="https://kimduyen0205.github.io/FilterList/">
+                  <button>See Demo</button>
+                </a>
+              </div>
+              <div class="language-proramming">
+                <span>HTML5</span>
+                <span>JavaScript</span>
+              </div>
+            </div>
+            <!-- end box -->
           </div>
         </div>
       </div>
