update new product

--- a/index.html
+++ b/index.html
@@ -45,16 +45,13 @@
           <a href="https://codepen.io/yuroit">
             <i class="codepen-icon fab fa-codepen fa-lg"></i>
           </a>
-          <a href="https://www.facebook.com/kuro.boo.01/">
+          <a href="https://www.facebook.com/kuro.boo.05/">
             <i class="facebook-icon fab fa-facebook fa-lg"></i>
           </a>
           <a
             href="https://www.youtube.com/channel/UCcjtxiKedC0eyHxqW_2-gAQ/videos"
           >
             <i class="youtube-icon fab fa-youtube fa-lg"></i>
-          </a>
-          <a href="https://www.linkedin.com/in/ngô-thị-kim-duyên-38a305202">
-            <i class="linked-icon fab fa-linkedin-in fa-lg"></i>
           </a>
         </p>
       </div>
@@ -152,7 +149,7 @@
               </tr>
               <tr>
                 <td><h4>Tools:</h4></td>
-                <td>Visual Studio Code, Git, Postman, Json Server</td>
+                <td>Visual Studio Code, Git, Json Server</td>
               </tr>
               <tr>
                 <td><h4>Code Quality Analysis:</h4></td>
@@ -511,16 +508,40 @@
             </div>
             <!-- end box -->
             <div class="box-portfolio">
-              <a href="https://kimduyen0205.github.io/FilterList/">
-                <img src="./images/Filter_list.png" alt="Chức năng lọc danh sách" />
+              <a href="https://kimduyen0205.github.io/FilterList/index.html">
+                <img
+                  src="./images/Filter_list.png"
+                  alt="Chức năng lọc danh sách"
+                />
               </a>
               <div class="detail-portfolio">
-                <a href="https://kimduyen0205.github.io/FilterList/">
+                <a href="https://kimduyen0205.github.io/FilterList/index.html">
                   <button>See Demo</button>
                 </a>
               </div>
               <div class="language-proramming">
                 <span>HTML5</span>
+                <span>JavaScript</span>
+              </div>
+            </div>
+            <!-- end box -->
+          </div>
+          <div class="row-portfolio">
+            <div class="box-portfolio">
+              <a href="https://kimduyen0205.github.io/QuanLyKhachHang/">
+                <img
+                  src="./images/qlsv.png"
+                  alt="Xây Dựng Chức Năng Quản Lý Khách Hàng Với Javascript"
+                />
+              </a>
+              <div class="detail-portfolio">
+                <a href="https://kimduyen0205.github.io/QuanLyKhachHang/">
+                  <button>See Demo</button>
+                </a>
+              </div>
+              <div class="language-proramming">
+                <span>HTML5</span>
+                <span>CSS</span>
                 <span>JavaScript</span>
               </div>
             </div>
