--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
               <tr>
                 <td><h4>Language programming:</h4></td>
                 <td>
-                  HTML5, CSS3, JavaScript Core ES6, Front-end Web
+                  HTML5, CSS3, SCSS, JavaScript Core ES6, Front-end Web
                   ReactJS,Bootstrap,Photoshop basics
                 </td>
               </tr>
