--- a/index.html
+++ b/index.html
@@ -144,12 +144,12 @@
                 <td><h4>Language programming:</h4></td>
                 <td>
                   HTML5, CSS3, SCSS, JavaScript Core ES6, Front-end Web
-                  ReactJS,Bootstrap,Photoshop basics
+                  ReactJS,Ant design,Photoshop basics
                 </td>
               </tr>
               <tr>
                 <td><h4>Tools:</h4></td>
-                <td>Visual Studio Code, Git, Json Server</td>
+                <td>Visual Studio Code, Gitlab</td>
               </tr>
               <tr>
                 <td><h4>Code Quality Analysis:</h4></td>
