--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
               <tr>
                 <td><h4>Language programming:</h4></td>
                 <td>
-                  HTML5, CSS3, SCSS, JavaScript Core ES6, Front-end Web
-                  ReactJS,Ant design,Photoshop basics
+                  HTML5, CSS3, Sass,Less, JavaScript Core ES6,TypeScript,
+                  Front-end Web ReactJS,Ant design,Photoshop basics
                 </td>
               </tr>
               <tr>
